# qt_singleton

./: CMakeLists.txt
include/: Handler.hpp
source/: main.cpp
